[gd_scene load_steps=14 format=2]

[ext_resource path="res://Entities/fonts/Xolonium-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Scripts/HUD.gd" type="Script" id=2]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://Entities/fonts/Xolonium-Regular.ttf"

[sub_resource type="DynamicFont" id=2]
size = 64
font_data = SubResource( 1 )

[sub_resource type="DynamicFontData" id=3]
font_path = "res://Entities/fonts/Xolonium-Regular.ttf"

[sub_resource type="DynamicFont" id=4]
size = 128
font_data = SubResource( 3 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.0705882, 0.811765, 0, 1 )
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color( 0, 0.513726, 0.101961, 1 )
shadow_size = 2

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.6, 0.6, 0.6, 0.686275 )

[sub_resource type="DynamicFontData" id=7]
font_path = "res://Entities/fonts/Xolonium-Regular.ttf"

[sub_resource type="DynamicFont" id=8]
size = 24
outline_size = 1
outline_color = Color( 0.533333, 0.533333, 0.533333, 1 )
use_mipmaps = true
extra_spacing_char = 1
font_data = SubResource( 7 )

[sub_resource type="DynamicFont" id=9]
size = 32
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=10]
size = 32
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=11]
size = 32
font_data = ExtResource( 1 )

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="ScoreLabel" type="Label" parent="."]
anchor_left = 0.437
anchor_right = 0.437
margin_left = 0.511993
margin_right = 45.512
margin_bottom = 78.0
custom_fonts/font = SubResource( 2 )
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Msg" type="Label" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 4 )
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MsgTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="ProgressBar" type="ProgressBar" parent="."]
visible = false
margin_left = 80.0
margin_top = 20.0
margin_right = 300.0
margin_bottom = 60.0
custom_styles/fg = SubResource( 5 )
custom_styles/bg = SubResource( 6 )
custom_fonts/font = SubResource( 8 )
step = 0.1
value = 100.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="menu1" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.345098, 0.352941, 0.121569, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="baslangic" type="Button" parent="menu1"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -125.0
margin_top = -95.0
margin_right = 125.0
margin_bottom = -45.0
custom_fonts/font = SubResource( 9 )
text = "Oyna"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ayar" type="Button" parent="menu1"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -125.0
margin_top = -25.0
margin_right = 125.0
margin_bottom = 25.0
custom_fonts/font = SubResource( 10 )
text = "Ayarlar"

[node name="cikis" type="Button" parent="menu1"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -125.0
margin_top = 45.0
margin_right = 125.0
margin_bottom = 95.0
custom_fonts/font = SubResource( 11 )
text = "Cikis"

[node name="menu2" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.345098, 0.352941, 0.121569, 0.470588 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="devam" type="Button" parent="menu2"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -125.0
margin_top = -95.0
margin_right = 125.0
margin_bottom = -45.0
custom_fonts/font = SubResource( 9 )
text = "Devam"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ayar" type="Button" parent="menu2"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -125.0
margin_top = -25.0
margin_right = 125.0
margin_bottom = 25.0
custom_fonts/font = SubResource( 10 )
text = "Ayarlar"

[node name="yenidenbasla" type="Button" parent="menu2"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -125.0
margin_top = 45.0
margin_right = 125.0
margin_bottom = 95.0
custom_fonts/font = SubResource( 11 )
text = "Yeniden basla"

[node name="menu3" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.345098, 0.352941, 0.121569, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="musiccheckbox" type="CheckBox" parent="menu3"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -125.0
margin_top = -95.0
margin_right = 125.0
margin_bottom = -45.0
custom_fonts/font = SubResource( 9 )
pressed = true
text = "MÃ¼zik"

[node name="soundcheckbox" type="CheckBox" parent="menu3"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -125.0
margin_top = -25.0
margin_right = 125.0
margin_bottom = 25.0
custom_fonts/font = SubResource( 10 )
pressed = true
text = "Ses"

[node name="tamam" type="Button" parent="menu3"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -125.0
margin_top = 45.0
margin_right = 125.0
margin_bottom = 95.0
custom_fonts/font = SubResource( 11 )
text = "Tamam"

[connection signal="timeout" from="MsgTimer" to="." method="_on_MsgTimer_timeout"]
[connection signal="pressed" from="menu1/baslangic" to="." method="_on_baslangic_pressed"]
[connection signal="pressed" from="menu1/ayar" to="." method="_on_ayar_pressed"]
[connection signal="pressed" from="menu1/cikis" to="." method="_on_cikis_pressed"]
[connection signal="pressed" from="menu2/devam" to="." method="_on_devam_pressed"]
[connection signal="pressed" from="menu2/ayar" to="." method="_on_ayar_pressed"]
[connection signal="pressed" from="menu2/yenidenbasla" to="." method="_on_yenidenbasla_pressed"]
[connection signal="toggled" from="menu3/musiccheckbox" to="." method="_on_musiccheckbox_toggled"]
[connection signal="toggled" from="menu3/soundcheckbox" to="." method="_on_soundcheckbox_toggled"]
[connection signal="pressed" from="menu3/tamam" to="." method="_on_tamam_pressed"]
